--- a/app/src/main/res/layout/row_meanings_item_view.xml
+++ b/app/src/main/res/layout/row_meanings_item_view.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="@android:color/transparent">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/dimen_5dp"
+    android:background="@android:color/transparent"
+    app:contentPadding="@dimen/dimen_8dp">
 
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:textColor="@color/black"
         android:textSize="@dimen/dimen_14sp"
         tools:text="@string/app_name" />
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
