--- a/app/src/main/res/layout/fragment_acronym.xml
+++ b/app/src/main/res/layout/fragment_acronym.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/home_bg"
     tools:context=".presentation.screens.acronym.AcronymFragment">
 
     <androidx.appcompat.widget.SearchView
@@ -27,7 +26,8 @@
         android:layout_below="@+id/searchView"
         android:layout_margin="@dimen/dimen_24dp"
         android:layout_marginBottom="264dp"
-        tools:listitem="@layout/meanings_item_view" />
+        android:background="@android:color/transparent"
+        tools:listitem="@layout/row_meanings_item_view" />
 
     <ProgressBar
         android:id="@+id/progressBar"
